# data-uri

./: .gitignore  README.md  data-uri  data-uri.cabal
src/: DataUri.hs  DataUriCmd.hs  encode.hs
