name:                data-uri
version:             0.2.0.0
synopsis:            binary file -> base64-encoded string

-- description:
license:             GPL-3
license-file:        LICENSE
author:              Curtis Gagliardi
maintainer:          cgag@riseup.net

-- copyright:
category:            Web
build-type:          Simple

cabal-version:       >=1.10

executable data-uri
  main-is: DataUriCmd.hs
  ghc-options: -O2
  build-depends:       base >=4.7
                    ,  bytestring >= 0.9.2.1
                    ,  base64-bytestring >= 1.0.0.1
                    ,  mime-types >= 0.1.0.3
                    ,  text >= 0.11.2.3
                    ,  containers >= 0.5.0.0
                    ,  optparse-applicative

  hs-source-dirs:      src
  default-language:    Haskell2010
